--- a/EmployeeManagement/EmployeeManagement.Api/appsettings.json
+++ b/EmployeeManagement/EmployeeManagement.Api/appsettings.json
@@ -14,12 +14,14 @@
     ],
     "EvaluationTimeInSeconds": 60
   },
+  //NOTE: Credentials are left in plain text for testing purposes since they were previously stored at the "secrets" level in Visual Studio.
   "WatchDog": {
-    "WatchPageUsername": "secret",
-    "WatchPagePassword": "secret"
+    "WatchPageUsername": "admin",
+    "WatchPagePassword": "123456"
   },
+  //NOTE: Credentials are left in plain text for testing purposes since they were previously stored at the "secrets" level in Visual Studio.
   "ConnectionStrings": {
-    "SQLServerConnectionString": "secret"
+    "SQLServerConnectionString": "Server=localhost;Database=EmployeeDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
